Bug 400257 - fixes alignment of hit zones, fixes integration of textfields in themebuilder, fixes a few css cosmetics for dropdown menus, selection and cleans up the theme chooser settings pages

--- a/bundles/org.eclipse.orion.client.ui/web/css/theme.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/theme.css
@@ -305,16 +305,17 @@ a.currentLocation:hover {
 }
 
 .dropdownMenu {
+	margin: 5px;
 	color: #222;
-	background-color: #fbfbfb;
+	background-color: white;
 	visibility: hidden;
 	z-index: 150;
 	min-width: 120px;
 	position: absolute;
 	list-style-type: none;
-	border-radius: 3px;
+	border-radius: 2px;
 	border: 1px solid #DDD;
-	padding: 0;
+	padding: 5px;
 }
 
 .dropdownSubMenu {
@@ -328,25 +329,26 @@ a.currentLocation:hover {
 
 .dropdownMenu > li {
 	min-width: 120px;
-	padding: 0 2px;
+	padding: 4px;
 	display: block;
 }
 
 .dropdownMenu > li > a, .dropdownMenu > li > span {
 	width: 100%;
 	margin: 0;
-	padding: 4px 0;
-}
-
-.dropdownMenu > li > *:focus {
-	outline: 1px dotted #aaa;
-	background: #f3f6fe;
+	padding: 3px;
+	padding-right:0;
 }
 
 .dropdownMenu > li:hover {
 	text-decoration: none;
 	background: #ffeecc;
 }
+
+.dropdownMenu > li > *:focus {
+	outline: 1px dotted #ddd;
+	background: white;
+	}
 
 .dropdownMenuOpen {
 	visibility: visible;
